style: header nav and contact-link responsive visibility for  prevention

--- a/my-project/styles/_header.scss
+++ b/my-project/styles/_header.scss
@@ -37,7 +37,7 @@
     &__nav {
         display: none;
         @include respond-to($breakpoint-xl) {
-            display: block;
+            display: block !important;
         }
     }
 
@@ -75,7 +75,7 @@
         display: none;
 
         @include respond-to($breakpoint-xl) {
-            display: block;
+            display: block !important;
         }
     }
 
